@@ -2,8 +2,8 @@ en:
   activerecord:
     errors:
       messages:
-        invalid_transition: "cannot {{event}}"
+        invalid_transition: "cannot transition"
   activemodel:
     errors:
       messages:
-        invalid_transition: "cannot {{event}}"
+        invalid_transition: "cannot %{event}"
