@@ -1732,7 +1732,7 @@ module ActiveRecordTest
       
       def test_should_use_defaults
         I18n.backend.store_translations(:en, {
-          :activerecord => {:errors => {:messages => {:invalid_transition => 'cannot {{event}}'}}}
+          :activerecord => {:errors => {:messages => {:invalid_transition => "cannot #{interpolation_key('event')}"}}}
         })
         
         machine = StateMachine::Machine.new(@model)
@@ -1747,7 +1747,7 @@ module ActiveRecordTest
       
       def test_should_allow_customized_error_key
         I18n.backend.store_translations(:en, {
-          :activerecord => {:errors => {:messages => {:bad_transition => 'cannot {{event}}'}}}
+          :activerecord => {:errors => {:messages => {:bad_transition => "cannot #{interpolation_key('event')}"}}}
         })
         
         machine = StateMachine::Machine.new(@model, :messages => {:invalid_transition => :bad_transition})
@@ -1760,7 +1760,7 @@ module ActiveRecordTest
       end
       
       def test_should_allow_customized_error_string
-        machine = StateMachine::Machine.new(@model, :messages => {:invalid_transition => 'cannot {{event}}'})
+        machine = StateMachine::Machine.new(@model, :messages => {:invalid_transition => "cannot #{interpolation_key('event')}"})
         machine.state :parked, :idling
         
         record = @model.new(:state => 'idling')
@@ -1880,10 +1880,15 @@ module ActiveRecordTest
         record = @model.new(:state => 'idling')
         
         machine.invalidate(record, :state, :invalid_transition, [[:event, :ignite]])
-        assert_equal ['State cannot ignite'], record.errors.full_messages
+        assert_equal ['State cannot transition'], record.errors.full_messages
       ensure
         I18n.load_path = @original_load_path
       end
+      
+      private
+        def interpolation_key(key)
+          ::ActiveRecord::VERSION::MAJOR < 3 ? "{{#{key}}}" : "%{#{key}}"
+        end
     end
   else
     $stderr.puts 'Skipping ActiveRecord I18n tests. `gem install active_record` >= v2.2.0 and try again.'
