@@ -1,5 +1,6 @@
 == master
 
+* Fix i18n deprecation warnings in ActiveModel / ActiveRecord 3.0.0.beta4
 * Fix default error message translations overriding existing locales in ActiveModel / ActiveRecord
 
 == 0.9.2 / 2010-05-24
